[gd_scene load_steps=6 format=3 uid="uid://bun67yf8js03y"]

[ext_resource type="Script" path="res://src/ui/menus/level_up_menu.gd" id="1_muate"]
[ext_resource type="Script" path="res://src/upgrades/upgrade_data.gd" id="2_s5k03"]
[ext_resource type="Resource" uid="uid://y6x6fm0k75vk" path="res://src/upgrades/upgrade_roll_speed.tres" id="3_tqkf4"]
[ext_resource type="Resource" uid="uid://b6yxv5owe76nm" path="res://src/upgrades/upgrade_grip.tres" id="4_mwf75"]
[ext_resource type="Resource" uid="uid://c7sdfy3ngd2cq" path="res://src/upgrades/upgrade_jump_force.tres" id="5_owugm"]

[node name="LevelUpMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_muate")
upgrades = Array[ExtResource("2_s5k03")]([ExtResource("3_tqkf4"), ExtResource("4_mwf75"), ExtResource("5_owugm")])

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.384314)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "UPGRADES
"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="StarchPointsLabel" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 3

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Roll Speed
"
horizontal_alignment = 2

[node name="UpgradeRollSpeedButton" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
text = "+"

[node name="RollSpeedCostLabel" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Cost: 100"
horizontal_alignment = 2

[node name="Label2" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Grip
"
horizontal_alignment = 2

[node name="UpgradeGripButton" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
text = "+"

[node name="GripCostLabel" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Cost: 75"
horizontal_alignment = 2

[node name="Label3" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Jump Force"
horizontal_alignment = 2

[node name="UpgradeJumpButton" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
text = "+"

[node name="JumpCostLabel" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Cost: 150"
horizontal_alignment = 2

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="CloseMenuButton" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Close"

[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/GridContainer/UpgradeRollSpeedButton" to="." method="on_upgrade_button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/GridContainer/UpgradeGripButton" to="." method="on_upgrade_button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/GridContainer/UpgradeJumpButton" to="." method="on_upgrade_button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/CloseMenuButton" to="." method="hide_menu"]
